# ENACdrives-webservice

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-prod.yml
apache2/: Dockerfile  httpd.conf
enacdrivesweb/: gunicorn.conf.py  manage.py
enacdrivesweb/config/: admin.py  ldap_epfl.py  tests.py  urls.py  utility.py  views.py
enacdrivesweb/config/management/commands/: admin_staff_setup.py
enacdrivesweb/config/static/css/: configadmin_custom.css
enacdrivesweb/config/static/js/: configadmin_custom.js
enacdrivesweb/enacdrivesweb/: app_settings.py  asgi.py  middleware.py  settings.py  settings_enacit1pc4.py  urls.py  wsgi.py
enacdrivesweb/releases/: models.py  urls.py  utility.py  views.py
enacdrivesweb/releases/migrations/: 0001_initial.py
enacdrivesweb/server_config/enacit1sbtest4/etc/apache2/sites-available/: django-enacdrives.conf
enacdrivesweb/server_config/enacit1vm1/etc/apache2/sites-available/: django-enacdrives.conf
enacdrivesweb/tools/: admin_staff_setup.py  check_config.py
