[tool.poetry]
name = "ENACdrives-webservice"
version = "0.1.0"
description = "ENACdrives webservice"
authors = ["Samuel Bancal <Samuel.Bancal@epfl.ch>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
ldap3 = "^2.9.1"
mysqlclient = "^2.1.1"
dynaconf = "^3.1.12"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.6.0"

[tool.poetry.group.dev.dependencies]
django-upgrade = "^1.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
