[tool.poetry]
name = "ENACdrives-webservice"
version = "0.1.0"
description = "ENACdrives webservice"
authors = ["Samuel Bancal <Samuel.Bancal@epfl.ch>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.22"
ldap3 = "^2.9.1"
mysqlclient = "^2.1.1"
dynaconf = "^3.1.12"
pyyaml = "^6.0"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
django-upgrade = "^1.14.0"
black = "^24.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
